# bevy_mod_opacity

./: Cargo.toml  README.md
assets/: rings1.glb
derive/: Cargo.toml  README.md
derive/src/: lib.rs
examples/: ui.rs
src/: alpha.rs  fading.rs  impls.rs  lib.rs
tests/: derives.rs
