[package]
name = "bevy_mod_opacity_derive"
version = "0.1.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_mod_opacity"
description = """
Hierarchical opacity for bevy.
"""

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.79"
